clusters/prod/workloads/asn2-game/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asn2
  labels:
    app.kubernetes.io/name: asn2-game
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
